[package]
name = "esp32c3_gee"
version = "0.1.0"
authors = ["Milan Svilenkovic"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.14.2", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.21.1", features = [ "esp32c3" ] }
esp-println = { version = "0.12.0", features = ["esp32c3", "log"] }
log = { version = "0.4.22" }

esp32c3 = { version = "0.25.0", features =["critical-section"] }
libm = "0.2.11"
fugit = "0.3.7"

rtic = { git = 'https://github.com/rtic-rs/rtic', features =["riscv-esp32c3-backend"]}
rtic-monotonics = {git = "https://github.com/rtic-rs/rtic", features = ["esp32c3-systimer"]}
rtic-sync = "1.3.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
